# urna_dynamics

./: .gitignore  pyproject.toml  requirements.txt
config/: cal_settings.json  conteo_real.json  forensic_settings.json  forensic_val_settings.json  recopilacion_fisica.json  sim_settings.json  urna1.json  urna1_val.json  urna2.json  urna2_val.json  urna_colors.json  val_settings.json
files/: resultado_forense_final_30.csv  resultado_forense_final_30_patron2a1.csv  resultado_forense_final_30_patron3a1.csv  resultado_forense_final_50.csv  resultado_forense_final_50_patron3a1.csv  resultado_forense_final_70_patron3a1.csv  votos_base.csv
scripts/: run_calibration.sh  run_cg_validation.sh  run_experiment.sh  run_forensic_analytics.sh  run_forensic_val_analytics.sh  run_simulation.sh  run_test.sh  run_validation.sh
src/analytics/: motor_estadistico.py
src/calibration/: get_best_models.py  get_csv_format.py  plot_metrics.py
src/graphs/: graficador_comparativo.py  visualizacion_estratos.py  visualizacion_validacion.py  visualizador_estadistico.py
src/simulations/: ejecutar_calibration.py  ejecutar_experimento.py  ejecutar_simulation.py  ejecutar_validacion.py  prueba_setup.py
src/utils/: calibrador.py  escenarios.py  paths.py  randomization.py  simuladores.py  validador.py
src/validation/: calcular_distribucion_estratos.py  ejecutar_analisis_forense.py  ejecutar_plot_combinacion.py  evaluador_convergencia.py  get_best_models.py  get_csv_format.py  motor_forense.py  orquestador_validacion.py  plot_metrics.py  plotear_combinacion.py  test_validation.ipynb  (+1 more)
