[tool.poetry]
name = "urna-dynamics"
version = "0.1.0"
description = "proyecto de analisis estadistico de la dinamica de votacion"
authors = ["kronstadtFedora <kronstadt.lambda@gmail.com>"]
readme = "README.md"
packages = [
    { include = "simulations", from = "src" },
    { include = "utils", from = "src" },
    { include = "validation", from = "src" },
    { include = "graphs", from = "src" },
    { include = "validation", from = "src" },
    { include = "analytics", from = "src" },
    { include = "forensics", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pandas = "^3.0.1"
numpy = "^2.4.2"
scipy = "^1.17.1"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
plotly = "^6.6.0"
tqdm = "^4.67.3"
statsmodels = "^0.14.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-repeat (>=0.9.4,<0.10.0)",
    "pytest-benchmark (>=5.2.3,<6.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "nbstripout (>=0.9.1,<0.10.0)"
]
